# dscanpy

./: .gitignore  README.md  benchmark.py  pyproject.toml
src/dscan/: __init__.py  core.py  crawler.py  filter.py  models.py
