[project]
name = "dscan"
version = "0.1.0"
description = ""
authors = [
    {name = "Sohan",email = "hoss1529@mylaurier.ca"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dscan", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.5,<5.0.0)"
]
