[project]
name = "dscanpy"
version = "0.1.0"
description = "Concurrent directory tree scanner for Python 3.12+"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
]

[project.urls]
Repository = "https://github.com/yourusername/dscanpy"

[tool.poetry]
packages = [{include = "dscan", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.5,<5.0.0)"
]